# usbd-gscan

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
src/: errors.rs  host.rs  identifier.rs  lib.rs  msft.rs
tests/: mock.rs
