[package]
name = "usbd-gscan"
description = "A driver for the Geschwister Schneider USB/CAN protocol."
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bitflags = "2.6.0"
defmt = { version = "0.3", optional = true }
embedded-can = "0.4.1"
heapless = "0.8.0"
usb-device = { version = "0.3.2", features = ["control-buffer-256"] }
zerocopy = { version = "0.7.35", features = ["derive"] }

[features]
defmt-03 = ["dep:defmt", "usb-device/defmt", "heapless/defmt-03"]

[dev-dependencies]
usbd-class-tester = "0.3.0"

[[test]]
name = "mock"
