[package]
name = "usbd-gscan"
description = "Driver for the Geschwister Schneider USB/CAN protocol."
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/umi-eng/usbd-gscan"
categories = ["no-std", "embedded", "network-programming"]

[dependencies]
bitflags = "2.13"
defmt = { version = "1.1", optional = true }
embedded-can = "0.4.1"
heapless = "0.9.3"
usb-device = { version = "0.3.2", features = ["control-buffer-256"] }
zerocopy = { version = "0.8.52", features = ["derive"] }

[features]
defmt = ["dep:defmt", "usb-device/defmt", "heapless/defmt"]

[dev-dependencies]
usbd-class-tester = "0.3.0"

[[test]]
name = "mock"
